--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1078,7 +1078,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vw/2768nt2d0y37nn87tklmygqh0000gp/T/ipykernel_59613/1352261900.py:6: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/vw/2768nt2d0y37nn87tklmygqh0000gp/T/ipykernel_61035/1352261900.py:6: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word, \"\")\n"
      ]
     }
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "616a9a77",
+   "id": "96103113",
    "metadata": {},
    "outputs": [
     {
@@ -2641,8 +2641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "d8fb9196",
+   "execution_count": 41,
+   "id": "1f9a2583",
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2667,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,8 +2680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "39d3df5a",
+   "execution_count": 42,
+   "id": "946d90cf",
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2705,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,8 +2718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "694ab332",
+   "execution_count": 43,
+   "id": "e3ea904b",
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
        "Name: budget, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,8 +2757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1a4348fb",
+   "execution_count": 44,
+   "id": "bc620b15",
    "metadata": {},
    "outputs": [
     {
@@ -2782,7 +2782,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2795,8 +2795,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "c43c3957",
+   "execution_count": 45,
+   "id": "bad0e2aa",
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2834,8 +2834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "b964d62c",
+   "execution_count": 46,
+   "id": "c100eba9",
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +2860,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2873,8 +2873,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "17e35762",
+   "execution_count": 47,
+   "id": "6eaee73f",
    "metadata": {},
    "outputs": [
     {
@@ -2899,7 +2899,7 @@
        "Name: student_name, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2912,8 +2912,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "26985b54",
+   "execution_count": 48,
+   "id": "f67bbc21",
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2938,7 @@
        "Name: student_name, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2951,8 +2951,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "309d773e",
+   "execution_count": 49,
+   "id": "0b51dfc2",
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2990,8 +2990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "50c8c4c3",
+   "execution_count": 50,
+   "id": "d4c223bc",
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +3016,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3029,8 +3029,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "84e2ecd2",
+   "execution_count": 51,
+   "id": "29f277f4",
    "metadata": {},
    "outputs": [
     {
@@ -3055,7 +3055,7 @@
        "Name: student_name, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3068,8 +3068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "60f545da",
+   "execution_count": 52,
+   "id": "68de5efc",
    "metadata": {},
    "outputs": [
     {
@@ -3094,7 +3094,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3107,8 +3107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "15496c25",
+   "execution_count": 53,
+   "id": "5173849f",
    "metadata": {},
    "outputs": [
     {
@@ -3318,7 +3318,7 @@
        "Pena High School               95.945946          90.540541  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3340,8 +3340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "2e1b3754",
+   "execution_count": 54,
+   "id": "343a6050",
    "metadata": {},
    "outputs": [
     {
@@ -3551,7 +3551,7 @@
        "Pena High School               95.945946          90.540541  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3567,8 +3567,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "bf74c7f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five performing schools\n",
+    "top_schools_df = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending = False)\n",
+    "\n",
+    "top_schools_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7e69ca9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show five lowest-performing schools\n",
+    "bottom_schools_df = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending = True)\n",
+    "\n",
+    "bottom_schools_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "88b340d8",
+   "id": "35b80dc6",
    "metadata": {},
    "outputs": [],
    "source": []
