--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "aa8ab5fb",
+   "id": "f4586223",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4545e2f4",
+   "id": "7f6ed7b7",
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2681,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2f279080",
+   "id": "fdbd9b9f",
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2bcf22f8",
+   "id": "79071d9f",
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2758,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b607b161",
+   "id": "1b4bc876",
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "765efaf7",
+   "id": "f4898b4d",
    "metadata": {},
    "outputs": [
     {
@@ -2835,7 +2835,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3da1dd23",
+   "id": "fbc7eea2",
    "metadata": {},
    "outputs": [
     {
@@ -2874,7 +2874,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "02fb407e",
+   "id": "57da19eb",
    "metadata": {},
    "outputs": [
     {
@@ -2913,7 +2913,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d2a3a202",
+   "id": "61f4650e",
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b8841594",
+   "id": "0c749a77",
    "metadata": {},
    "outputs": [
     {
@@ -2991,7 +2991,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9fc93c00",
+   "id": "d54dbc29",
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3030,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "47535eb9",
+   "id": "60bd7140",
    "metadata": {},
    "outputs": [
     {
@@ -3069,7 +3069,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a0f3b6f9",
+   "id": "4d9101f5",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b26385cd",
+   "id": "d2676621",
    "metadata": {},
    "outputs": [
     {
@@ -3341,7 +3341,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "0af3bf1e",
+   "id": "d1cf5123",
    "metadata": {},
    "outputs": [
     {
@@ -3568,7 +3568,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "93b2040e",
+   "id": "2f6c2ca8",
    "metadata": {},
    "outputs": [
     {
@@ -3713,7 +3713,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7813bc44",
+   "id": "64a714df",
    "metadata": {},
    "outputs": [
     {
@@ -3858,7 +3858,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "90682aac",
+   "id": "74414288",
    "metadata": {},
    "outputs": [
     {
@@ -4007,7 +4007,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "48c432f4",
+   "id": "9298e661",
    "metadata": {},
    "outputs": [
     {
@@ -4053,7 +4053,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "31d531e0",
+   "id": "0a456ab3",
    "metadata": {},
    "outputs": [
     {
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "38de5c4b",
+   "id": "0fbe09be",
    "metadata": {},
    "outputs": [
     {
@@ -4284,7 +4284,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a3036132",
+   "id": "ece07e0a",
    "metadata": {},
    "outputs": [
     {
@@ -4469,7 +4469,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0ba28fc5",
+   "id": "1eb6850c",
    "metadata": {},
    "outputs": [
     {
@@ -4656,7 +4656,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ac6d45c2",
+   "id": "e1e44c2e",
    "metadata": {},
    "outputs": [
     {
@@ -4843,7 +4843,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5005dbe0",
+   "id": "e1cf2694",
    "metadata": {},
    "outputs": [
     {
@@ -4873,7 +4873,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "cfcc607d",
+   "id": "f48fa67d",
    "metadata": {},
    "outputs": [
     {
@@ -4913,7 +4913,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "ef82ef49",
+   "id": "47585db4",
    "metadata": {},
    "outputs": [
     {
@@ -4939,7 +4939,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "6e1e4f59",
+   "id": "44682a5d",
    "metadata": {},
    "outputs": [
     {
@@ -5277,7 +5277,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a8bfcc12",
+   "id": "54fd055b",
    "metadata": {},
    "outputs": [
     {
@@ -5314,7 +5314,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "48564040",
+   "id": "34dd0bd0",
    "metadata": {},
    "outputs": [
     {
@@ -5432,7 +5432,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "60e7847f",
+   "id": "df396e29",
    "metadata": {},
    "outputs": [
     {
@@ -5554,7 +5554,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "6c05be49",
+   "id": "9aba8ae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5566,7 +5566,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "cce825ac",
+   "id": "adc98a39",
    "metadata": {},
    "outputs": [
     {
@@ -5920,7 +5920,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a1826285",
+   "id": "09cbcde6",
    "metadata": {},
    "outputs": [
     {
@@ -5956,7 +5956,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "a9ca8063",
+   "id": "bf9a7630",
    "metadata": {},
    "outputs": [
     {
@@ -6057,7 +6057,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5c75b3ab",
+   "id": "cba06de9",
    "metadata": {},
    "outputs": [
     {
@@ -6161,8 +6161,229 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "63998320",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     90.432244\n",
+       "District    53.672208\n",
+       "Name: % Overall Passing, dtype: float64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages by type\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_passing_overall = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
+    "\n",
+    "type_passing_overall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5bec98da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble school type DataFrame\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "    \"Average Math Score\": type_math_scores,\n",
+    "    \"Average Reading Score\": type_reading_scores,\n",
+    "    \"% Passing Math\": type_passing_math,\n",
+    "    \"% Passing Reading\": type_passing_reading,\n",
+    "    \"% Overall Passing\": type_passing_overall})\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "2aeffb12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Format school type DataFrame\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b5219bad",
+   "id": "c6fc665b",
    "metadata": {},
    "outputs": [],
    "source": []
